3proxy/iptables.rules
*nat
:PREROUTING ACCEPT [29:5749]
:INPUT ACCEPT [5:785]
:OUTPUT ACCEPT [327:37571]
:POSTROUTING ACCEPT [490:41566]
:3PROXY - [0:0]
-A OUTPUT -p tcp -j 3PROXY
-A OUTPUT -s 127.0.0.1/32 -p udp -m udp --dport 53 -j REDIRECT --to-ports 10053
-A 3PROXY -d 0.0.0.0/8 -j RETURN
-A 3PROXY -d 10.0.0.0/8 -j RETURN
-A 3PROXY -d 127.0.0.0/8 -j RETURN
-A 3PROXY -d 169.254.0.0/16 -j RETURN
-A 3PROXY -d 172.16.0.0/12 -j RETURN
-A 3PROXY -d 192.168.0.0/16 -j RETURN
-A 3PROXY -d 224.0.0.0/4 -j RETURN
-A 3PROXY -d 240.0.0.0/4 -j RETURN
-A 3PROXY -p tcp -j REDIRECT --to-ports 31338
COMMIT
*mangle
:PREROUTING ACCEPT [22215:25936392]
:INPUT ACCEPT [22191:25931428]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20463:17476002]
:POSTROUTING ACCEPT [20424:17467804]
COMMIT
*filter
:INPUT ACCEPT [6970:10647485]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2710:308414]
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p udp -m udp --dport 10053 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o lo -p udp -m udp --dport 10053 -j ACCEPT
-A OUTPUT -p udp -j DROP
COMMIT
